--- a/.github/workflows/sender.yml
+++ b/.github/workflows/sender.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           context: .
           file: ./deployments/sender.Dockerfile
-          platforms: linux/amd64
+          platforms: linux/386,linux/amd64,linux/arm64,linux/arm/v7
           push: true
           tags: |
             muxfd/multipath-udp-sender:latest
